flask_app.log
  File "<string>", line 1
    from flask import Flask; app = Flask(__name__); @app.route('/'); def hello(): return 'Bot is running on port 8080'; app.run(host='0.0.0.0', port=8080)
                                                    ^
SyntaxError: invalid syntax
